--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -28,13 +28,14 @@ jobs:
     - name: Install Poetry
       uses: snok/install-poetry@v1
       with:
-          virtualenvs-create: true
-          virtualenvs-in-project: true
-          installer-parallel: true
+        virtualenvs-create: true
+        virtualenvs-in-project: true
+        installer-parallel: true
 
     - name: Install dependencies
       run: poetry install --no-interaction --no-root
 
     - name: Build test
       run: |
+        source .venv/bin/activate
         make html
