--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -10,6 +10,10 @@ on:
     branches:
       - '**'
 
+env:
+  DOCKERHUB_SLUG: openbayes/tvm-cn
+  GHCR_SLUG: ghcr.io/hyperai/tvm-cn
+
 jobs:
   build-n-deploy:
     runs-on: ubuntu-latest
@@ -28,3 +32,57 @@ jobs:
 
     - name: Build Docusaurus
       run: yarn build
+
+    - name: Set up QEMU
+      uses: docker/setup-qemu-action@v2
+
+    - name: Set up Docker Buildx
+      id: buildx
+      uses: docker/setup-buildx-action@v2
+
+    - name: Available platforms
+      run: echo ${{ steps.buildx.outputs.platforms }}
+
+    - name: Log in to Docker Hub
+      if: github.event_name != 'pull_request'
+      uses: docker/login-action@v2
+      with:
+        username: ${{ secrets.DOCKERHUB_USERNAME }}
+        password: ${{ secrets.DOCKERHUB_TOKEN }}
+
+    - name: Login to GitHub Container Registry
+      if: github.event_name != 'pull_request'
+      uses: docker/login-action@v2
+      with:
+        registry: ghcr.io
+        username: ${{ github.repository_owner }}
+        password: ${{ secrets.GITHUB_TOKEN }}
+
+    - name: Docker meta
+      id: meta
+      uses: docker/metadata-action@v4
+      with:
+        images: |
+          ${{ env.DOCKERHUB_SLUG }}
+          ${{ env.GHCR_SLUG }}
+        tags: |
+          type=edge
+          type=schedule
+          type=ref,event=branch
+          type=ref,event=pr
+          type=semver,pattern={{version}}
+          type=semver,pattern={{major}}.{{minor}}
+          type=semver,pattern={{major}}
+          type=sha
+
+    - name: Build and push
+      uses: docker/bake-action@v2
+      with:
+        files: |
+          ./docker-bake.hcl
+          ${{ steps.meta.outputs.bake-file }}
+        targets: build-all
+        push: ${{ github.event_name != 'pull_request' }}
+        set: |
+          *.cache-from=type=gha
+          *.cache-to=type=gha,mode=max
