fix(github-actions): missing install step

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -47,6 +47,9 @@ jobs:
         restore-keys: |
           ${{ runner.os }}-pnpm-store-
 
+    - name: Install dependencies
+      run: pnpm install
+
     - name: Build Docusaurus
       run: pnpm build
 
