--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "website",
+  "name": "tvm-cn",
   "version": "0.0.0",
   "private": true,
   "scripts": {
@@ -12,29 +12,28 @@
     "serve": "docusaurus serve",
     "swizzle-upgrade": "bash scripts/swizzle",
     "write-translations": "docusaurus write-translations",
-    "write-heading-ids": "docusaurus write-heading-ids"
+    "write-heading-ids": "docusaurus write-heading-ids",
+    "typecheck": "tsc"
   },
   "dependencies": {
     "@docusaurus/core": "2.4.1",
     "@docusaurus/preset-classic": "2.4.1",
-    "@docusaurus/theme-live-codeblock": "2.4.1",
     "@mdx-js/react": "1.6.22",
     "@openbayes/docsearch-css": "1.2.7",
     "@openbayes/docusaurus-enlight": "1.2.10",
-    "@svgr/webpack": "8.0.1",
     "@tippyjs/react": "4.2.6",
     "clsx": "1.2.1",
     "docusaurus-plugin-sass": "0.2.4",
-    "file-loader": "6.2.0",
     "kladenets": "2.0.0-15",
     "prism-react-renderer": "1.3.5",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "sass": "1.63.6",
-    "url-loader": "4.1.1"
+    "sass": "1.63.6"
   },
   "devDependencies": {
-    "@docusaurus/module-type-aliases": "2.4.1"
+    "@docusaurus/module-type-aliases": "2.4.1",
+    "@tsconfig/docusaurus": "^2.0.0",
+    "typescript": "^5.1.6"
   },
   "browserslist": {
     "production": [
@@ -47,5 +46,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "engines": {
+    "node": ">=16.14"
   }
 }
