--- a/package.json
+++ b/package.json
@@ -32,8 +32,8 @@
   },
   "devDependencies": {
     "@docusaurus/module-type-aliases": "2.4.1",
-    "@tsconfig/docusaurus": "^2.0.0",
-    "typescript": "^5.1.6"
+    "@tsconfig/docusaurus": "2.0.0",
+    "typescript": "5.1.6"
   },
   "browserslist": {
     "production": [
