--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "prism-react-renderer": "2.1.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "rehype-katex": "7",
+    "remark-math": "6",
     "sass": "1.69.5"
   },
   "devDependencies": {
