--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -20,6 +20,10 @@ jobs:
 
     steps:
     - uses: actions/checkout@v4
+      with:
+        # Fetch all history for Docusaurus `showLastUpdateTime` to work
+        # https://github.com/facebook/docusaurus/issues/2798
+        fetch-depth: 0
 
     - name: Set up Node.js ${{ matrix.node-version }}
       uses: actions/setup-node@v4
