--- a/package.json
+++ b/package.json
@@ -27,8 +27,8 @@
     "prism-react-renderer": "2.3.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "rehype-katex": "7",
-    "remark-math": "6",
+    "rehype-katex": "^7.0.1",
+    "remark-math": "^6.0.0",
     "sass": "1.77.2"
   },
   "devDependencies": {
@@ -50,5 +50,6 @@
   },
   "engines": {
     "node": ">=18.0"
-  }
+  },
+  "packageManager": "pnpm@9.12.1+sha512.e5a7e52a4183a02d5931057f7a0dbff9d5e9ce3161e33fa68ae392125b79282a8a8a470a51dfc8a0ed86221442eb2fb57019b0990ed24fab519bf0e1bc5ccfc4"
 }
