--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -101,6 +101,7 @@ jobs:
     - name: Build and push
       uses: docker/bake-action@v6
       with:
+        source: .
         files: |
           ./docker-bake.hcl
           ${{ steps.meta.outputs.bake-file }}
